# Hill-climb-racing-on-SDL

./: .gitignore  CMakeLists.txt
src/: baseHud.cpp  baseHud.hpp  define.hpp  entity.cpp  entity.hpp  im_load.cpp  im_load.hpp  main.cpp  main.hpp  object.cpp  object.hpp  structs.hpp
